Bug 155699 - MRU should show pinned items first
Summary: MRU should show pinned items first
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on: 38742
Blocks: Recent-Document-List Start-Center
  Show dependency treegraph
 
Reported: 2023-06-06 07:15 UTC by Heiko Tietze
Modified: 2023-09-11 08:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2023-06-06 07:15:01 UTC
File > Recent documents shows the documents from the current module first. Since the MRU list might become long, users might want to sort the pinned items on top given that documents from different modules are used in the same project. The sort order would be pinned first, module second.

Current situation

Untitled1.odt*
Untitled2.odt
Untitled3.odt
-
Untitled1.ods*
Untitled2.ods
Untitled1.odp*
Untitled2.odp

Expected result

Untitled1.odt*
Untitled1.ods*
Untitled1.odp*
-
Untitled2.odt
Untitled3.odt
-
Untitled2.ods
Untitled2.odp
Comment 1 Andreas Heinisch 2023-06-06 20:13:16 UTC
Confirmed in:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: bda52485d63e4cfc58453d9f46bf26c3ea078ed7
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 2 Commit Notification 2023-06-15 07:55:06 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/651d60f79c28c9a8e456817990c21a404c69d700

tdf#155699 - MRU: show pinned documents at the beginning of the list

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-06-16 07:27:47 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/eb1ee15aeb542fe55b38ba70cc2f9eb962cc245e

tdf#155699 - MRU: show pinned documents at the beginning of the list

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Robert Cabane 2023-09-02 08:11:39 UTC
Just tested here (LO 7.6.0.3, Linux+KDE).
I love this feature ! Thank you, really.
Just a note : the pin's design doesn't look very attractive (large & black pins).