tdf#155699 - MRU: show pinned documents at the beginning of the list

Change-Id: Id08678708ee74a4a278baa1e67930044f25e5d5d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152690
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>